kubeyaml/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: { }
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.23.2
          name: nginx
          ports:
            - containerPort: 80
              name: http
          resources: { }
