kubeyaml/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: do-issuer
  name: nginx
  namespace: system
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.lab.cloud.haugom.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.lab.cloud.haugom.org
      secretName: nginx-cert
